<resources>
  <string name="app_name">Cinestine</string>
  <string name="action_settings">Settings</string>
  <string name="action_search">Search</string>
  <string name="search_hint">Search titles</string>
  <string name="search_hint_movies">Search movies</string>
  <string name="search_hint_tv">Search TV shows</string>
  <string name="search_hint_all">Search movies and TV</string>
  <string name="search_idle">Find a title</string>
  <string name="search_idle_hint">Switch Movies, TV, People, or Collections, then type a name</string>
  <string name="search_empty">No titles found</string>
  <string name="search_empty_hint">Try a different name or spelling</string>
  <string name="action_dark_mode">Dark mode</string>
  <string name="action_light_mode">Light mode</string>
  <string name="action_theme_system">Use system theme</string>
  <string name="action_share">Share</string>
  <string name="action_retry">Retry</string>
  <string name="action_watch_region">Watch region</string>
  <string name="region_device">Device default</string>
  <string name="share_title_text">%1$s\n%2$s</string>
  <string name="saved_search_hint">Search watchlist</string>
  <string name="sort_recent">Recent</string>
  <string name="sort_rating">Rating</string>
  <string name="sort_title">Title</string>
  <string name="empty_saved_search">No titles in your watchlist match</string>
  <string name="empty_saved_search_hint">Try a different name</string>
  <string name="watch_empty">No services listed for this region</string>
  <string name="watch_region_format">%1$s</string>
  <string name="filter_all_disabled">Pick Movies or TV to filter</string>
  <string name="Select">Select a title</string>
  <string name="releaseDate">Released</string>
  <string name="Rating">Score</string>
  <string name="rating_format">%.1f</string>
  <string name="rating_out_of_ten">%.1f</string>
  <string name="overview">Story</string>
  <string name="trailers">Watch</string>
  <string name="reviews">Notes</string>
  <string name="watch_trailer">Watch trailer</string>
  <string name="show_more">More</string>
  <string name="show_less">Less</string>
  <string name="votes_format">%1$s votes</string>
  <string name="language_format">%1$s</string>
  <string name="author">Author-</string>
  <string name="author_format">%1$s</string>
  <string name="content_desc_poster">Movie poster</string>
  <string name="content_desc_play">Play trailer</string>
  <string name="content_desc_back">Back</string>
  <string name="title_activity_details">Details</string>
  <string name="empty_favourites">No titles in your watchlist yet</string>
  <string name="empty_favourites_movies">No movies in your watchlist yet</string>
  <string name="empty_favourites_tv">No TV shows in your watchlist yet</string>
  <string name="empty_favourites_hint">Tap the heart on a movie or show to add it here</string>
  <string name="empty_details">Pick a title from the list to see posters, trailers, and reviews</string>
  <string name="save_movie">Add to watchlist</string>
  <string name="unsave_movie">Remove from watchlist</string>
  <string name="share_subject">Sent from Cinestine</string>
  <string name="share_via">Share via</string>
  <string name="nav_popular">Home</string>
  <string name="nav_hot">Hot</string>
  <string name="nav_top_rated">Top rated</string>
  <string name="nav_saved">Watchlist</string>
  <string name="chip_movies">Movies</string>
  <string name="chip_tv">TV</string>
  <string name="chip_all">All</string>
  <string name="chip_people">People</string>
  <string name="chip_collections">Collections</string>
  <string name="search_hint_people">Search people</string>
  <string name="search_hint_collections">Search collections</string>
  <string name="credit_all">All</string>
  <string name="credit_acting">Acting</string>
  <string name="credit_directing">Directing</string>
  <string name="collection">Collection</string>
  <string name="part_of_collection">Part of %1$s</string>
  <string name="guest_stars">Guest stars</string>
  <string name="title_activity_collection">Collection</string>
  <string name="title_activity_episode">Episode</string>
  <string name="topics">Explore</string>
  <string name="title_popular">Home</string>
  <string name="title_hot">Hot</string>
  <string name="see_all">See all</string>
  <string name="rail_recently_viewed">Recently viewed</string>
  <string name="rail_trending_movies">Trending movies</string>
  <string name="rail_trending_tv">Trending TV</string>
  <string name="rail_popular_movies">Popular movies</string>
  <string name="rail_popular_tv">Popular TV</string>
  <string name="rail_top_rated_movies">Top rated movies</string>
  <string name="rail_top_rated_tv">Top rated TV</string>
  <string name="hot_empty">Nothing hot right now</string>
  <string name="hot_empty_hint">Try another filter or switch Movies and TV</string>
  <string name="chip_popular">Popular</string>
  <string name="title_top_rated">Top rated</string>
  <string name="title_saved">Watchlist</string>
  <string name="type_movie">Movie</string>
  <string name="type_tv">TV</string>
  <string name="runtime_hours_minutes">%1$dh %2$dm</string>
  <string name="runtime_hours">%dh</string>
  <string name="runtime_minutes">%dm</string>
  <string name="runtime_episode">%dm/ep</string>
  <string name="networks_format">On %1$s</string>
  <string name="next_episode">Next episode</string>
  <string name="latest_episode">Latest episode</string>
  <string name="seasons">Seasons</string>
  <string name="episodes">Episodes</string>
  <string name="episode_code">S%1$d E%2$d</string>
  <string name="episode_fallback">Episode %d</string>
  <string name="cast">Cast</string>
  <string name="more_like_this">More like this</string>
  <string name="where_to_watch">Where to watch</string>
  <string name="photos">Photos</string>
  <string name="video_all">All</string>
  <string name="video_trailers">Trailers</string>
  <string name="video_teasers">Teasers</string>
  <string name="video_clips">Clips</string>
  <string name="chip_trending">Trending</string>
  <string name="chip_now_playing">In theatres</string>
  <string name="chip_upcoming">Upcoming</string>
  <string name="chip_airing_today">Airing today</string>
  <string name="chip_on_the_air">On the air</string>
  <string name="title_trending">Trending</string>
  <string name="title_now_playing">In theatres</string>
  <string name="title_upcoming">Upcoming</string>
  <string name="title_airing_today">Airing today</string>
  <string name="title_on_the_air">On the air</string>
  <string name="action_filter">Filters</string>
  <string name="filter_genres">Genres</string>
  <string name="filter_year">Year</string>
  <string name="filter_score">Minimum score</string>
  <string name="filter_apply">Apply</string>
  <string name="filter_clear">Clear</string>
  <string name="filter_any">Any</string>
  <string name="filter_score_6">6+</string>
  <string name="filter_score_7">7+</string>
  <string name="filter_score_8">8+</string>
  <string name="known_for">Known for</string>
  <string name="biography">Biography</string>
  <string name="content_desc_cast">Cast member</string>
  <string name="title_activity_person">Person</string>
  <string name="title_activity_discover">Discover</string>
  <string name="discover_empty">No titles match this topic</string>
  <string name="discover_empty_hint">Try another keyword, studio, or network</string>
  <string name="collection_parts">%d titles</string>
  <string-array name="tabs">
    <item>@string/nav_popular</item>
    <item>@string/nav_hot</item>
    <item>@string/nav_top_rated</item>
    <item>@string/nav_saved</item>
  </string-array>
</resources>
