<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".ui.main.MainActivity">
  <item
    android:id="@+id/action_search"
    android:icon="@drawable/ic_search"
    android:orderInCategory="0"
    android:title="@string/action_search"
    app:actionViewClass="androidx.appcompat.widget.SearchView"
    app:iconTint="@color/on_surface"
    app:showAsAction="always|collapseActionView" />
  <item
    android:id="@+id/action_theme"
    android:icon="@drawable/ic_dark_mode"
    android:orderInCategory="1"
    android:title="@string/action_dark_mode"
    app:iconTint="@color/on_surface"
    app:showAsAction="always" />
  <item
    android:id="@+id/action_theme_system"
    android:orderInCategory="2"
    android:title="@string/action_theme_system"
    app:showAsAction="never" />
  <item
    android:id="@+id/action_watch_region"
    android:orderInCategory="3"
    android:title="@string/action_watch_region"
    app:showAsAction="never" />
</menu>
